--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server --ext ts,js",
-    "migrate": "npx prisma migrate dev --preview-feature",
+    "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,10 +21,13 @@
   "homepage": "https://github.com/Chickenbumps/swith-backend#readme",
   "devDependencies": {
     "nodemon": "^2.0.12",
+    "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@prisma/client": "^2.28.0",
+    "@types/node": "^10.17.60",
     "apollo-server": "^3.1.2",
     "graphql": "^15.5.1"
   }
