--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "build",
     "allowJs": true,
-    "target": "es5",
+    "lib": ["esnext"],
     "esModuleInterop": true
   },
   "include": ["./src/**/*"]
