--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/server --ext ts,js",
     "migrate": "prisma migrate dev",
+    "studio": "prisma studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +27,11 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.3.2",
     "@prisma/client": "^2.28.0",
     "@types/node": "^10.17.60",
     "apollo-server": "^3.1.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "graphql-tools": "^8.0.0"
   }
 }
