--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Chickenbumps/swith-backend#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
@@ -31,6 +32,8 @@
     "@prisma/client": "^2.28.0",
     "@types/node": "^10.17.60",
     "apollo-server": "^3.1.2",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "graphql-tools": "^8.0.0"
   }
