--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Chickenbumps/swith-backend#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
@@ -35,6 +36,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
-    "graphql-tools": "^8.0.0"
+    "graphql-tools": "^8.0.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
