--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/Chickenbumps/swith-backend#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/graphql-upload": "^8.0.6",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
@@ -33,10 +35,15 @@
     "@prisma/client": "^2.28.0",
     "@types/node": "^10.17.60",
     "apollo-server": "^3.1.2",
+    "apollo-server-express": "^3.1.2",
+    "aws-sdk": "^2.961.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-tools": "^8.0.0",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-upload": "^12.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   }
 }
