--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
+    "prisma-dbml-generator": "^0.6.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@graphql-tools/load-files": "^6.3.2",
+    "@paljs/plugins": "^3.6.1",
     "@prisma/client": "^2.28.0",
     "@types/node": "^10.17.60",
     "apollo-server": "^3.1.2",
