--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^8.0.0",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
