--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/schema": "^8.0.3",
     "@paljs/plugins": "^3.6.1",
     "@prisma/client": "^2.28.0",
     "@types/node": "^10.17.60",
@@ -44,9 +45,11 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^8.0.0",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "subscriptions-transport-ws": "^0.9.19"
   }
 }
