--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "graphql-tools": "^8.0.0",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "save": "^2.4.0",
     "subscriptions-transport-ws": "^0.9.19"
   }
 }
