--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "aws-sdk": "^2.961.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-iso-date": "^3.6.1",
